; Stdlib worker

(executable
 (name worker)
 (modes byte)
 (flags
  (:standard -linkall))
 (modules worker)
 (libraries base js_top_worker))

(executable
 (name merlin_worker)
 (modes js)
 (js_of_ocaml
  (flags --source-map --pretty --debug-info))
 (modules merlin_worker)
 (libraries merlin-js.worker))

(rule
 (targets export.txt)
 (deps worker.bc)
 (action
  (run jsoo_listunits -o %{targets} stdlib base)))

(rule
 (targets worker.js)
 (action
  (run
   %{bin:js_of_ocaml}
   --export
   %{dep:export.txt}
   --toplevel
   --pretty
   --source-map
   --debug-info
   --no-inline
   +toplevel.js
   +dynlink.js
   +bigarray.js
   +capsule.js
   +base/runtime.js
   %{dep:worker.bc}
   -o
   %{targets})))

; Playground

(executable
 (name main)
 (modes js)
 ; (js_of_ocaml (flags 
 ;   --pretty
 ;   --source-map
 ;   --debug-info))
 (modules
  (:standard \ worker merlin_worker))
 (libraries
  brr
  code-mirror
  compiler-libs.common
  compiler-libs.toplevel
  merlin-js.worker.static
  merlin-js.code-mirror
  js_top_worker-client
  rpclib-lwt))
